# MachineLearning

./: .gitignore  cluster.py  cluster_balance.py  pyproject.toml  requirements.txt
DocumentClusteringKMeans/: main.py
DocumentClusteringKMeans3/: example2.py  example3.py
datamining/ch01/: numpy.random.py
datamining/ml/: test01.py  test03.py  test04.py  test05.py  test07.py  test08.py  test09.py
tf2/: tf2_08_sentiment_analysis.py  tf2_10_iris_kmeansclustering.py  tf2_14_spacy.py  tf2_16_word_vector.py  tf2_17_exploratory_data_analysis.py  tf2_18_word_popcorn_preprocess.py  tf2_19_word_popcorn_model_tfidf_logistic_regression.py  tf2_19_word_popcorn_model_word2vec_logistic_regression.py  tf2_20_word_popcorn_model_word2vec_logistic_regression.py  tf2_21_word_popcorn_model_countervector_randomforest.py
