[project]
name = "machinelearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "gensim>=4.3.3",
    "ipython>=9.6.0",
    "keras>=3.11.3",
    "keras-nlp>=0.22.2",
    "keras-preprocessing>=1.1.2",
    "knn>=1.0.0",
    "konlpy>=0.6.0",
    "matplotlib>=3.10.6",
    "mglearn>=0.2.0",
    "nltk>=3.9.2",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "tensorflow>=2.18.1",
    "tensorflow-datasets>=4.9.9",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "wikipedia>=1.4.0",
    "wordcloud>=1.9.4",
]
